# document_conversion_service

./: .gitignore  PLAN.md  pyproject.toml
.junie/: guidelines.md
scripts/: create_job.sh  demo_flow.sh  get_job.sh  get_result.sh  health.sh
src/doc_service/: __init__.py  main.py  streamlit_app.py  webapi.py
src/doc_service/conversion/: __init__.py  adapters.py  interfaces.py  service.py
